# Nexus-Sql-Agent

./: .env.example  .gitignore  ARCHITECTURE.md  BASELINE.md  BENCHMARK.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.sh
api/: context.py  main.py
db/: fewshot_store.py  query_cache.py  schema_init.py  schema_store.py
eval/: benchmark_metrics.json  benchmark_results.json  conftest.py  gold_queries.py  metrics.py  report.py  result_equivalence.py  run_benchmark.py  run_saas_benchmark.py  saas_benchmark_results.json  saas_demo_seed.sql  saas_gold.py  saas_schema.sql  saas_seed.sql  test_cache_accuracy.py  test_chart_classification.py  test_latency.py  test_saas_correctness.py  test_safety.py  test_self_correction.py  test_sql_correctness.py  test_suite.py
eval/archive_chinook/: README.md  test_cache_accuracy.py  test_sql_correctness.py
graph/: __init__.py  graph.py  state.py
graph/nodes/: check_cache.py  (+10 more)
nixus/: __init__.py  cli.py  cli_render.py  config.py
safety/: guardrails.py
scripts/: dev.sh  entrypoint.sh  init-demo-db.sh  init-saas-db.sh  init-target-db.sql  init_db.py  migrate_chinook.py  rebuild_demo_db.py  rebuild_saas_db.py  seed_fewshot_examples.py  seed_schema_embeddings.py  setup.sh  use_target.sh
tests/: test_setup_env_guard.py
ui/: app.py
utils/: confidence.py  embeddings.py  langsmith_config.py  logging_config.py  retry.py  sql_safety.py
web/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
(+74 files in other folders)
